Added DuckDNS token placeholder in `config.conf`
Signed-off-by: Chris1320 <chris1320is@protonmail.com>

--- a/tunnel/config.conf
+++ b/tunnel/config.conf
@@ -9,6 +9,7 @@ api_key=YOUR_REDIRECT_SERVER_API_KEY_HERE
 
 # DuckDNS configuration
 duckdns_domain=YOUR_DUCKDNS_DOMAIN_NAME_HERE
+duckdns_token=YOUR_DUCKDNS_TOKEN_HERE
 
 # ngrok configuration
 #ngrok_path=NGROK_PATH_HERE  # Assume it's on PATH.
