Updated config.conf placeholders.
Signed-off-by: Chris1320 <chris1320is@protonmail.com>

--- a/tunnel/config.conf
+++ b/tunnel/config.conf
@@ -1,9 +1,10 @@
 # The server to expose to the public internet.
-server_port=80
+server_port=5050
 protocol=http
 
 # The URL of the server that will redirect the user.
 update_url=YOUR_REDIRECT_SERVER_URL_HERE
+update_port=5050
 update_url_https=true
 api_key=YOUR_REDIRECT_SERVER_API_KEY_HERE
 
